# moleview

./: LICENSE  README.md  app.py  atom.py  draw.py  main.py  moleview.py  pyproject.toml  requirements.txt  setup.py
moleview/: __init__.py
moleview/src/: __init__.py  atom.py  draw.py  moleview.py
src/: __init__.py  draw.py  moleview.py
test_xyz/: alanine-tripeptide.xyz  aspirin.xyz  benzene.xyz  cocaine.xyz  glucose.xyz
